[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/PauseMenu/PauseMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/icons/Untitled.svg" type="Texture" id=2]
[ext_resource path="res://resources/default_theme.tres" type="Theme" id=3]
[ext_resource path="res://scenes/PlaySpace/PlaySpace.gd" type="Script" id=4]

[sub_resource type="PanoramaSky" id=3]

[sub_resource type="Environment" id=2]
resource_local_to_scene = true
background_mode = 4
background_sky = SubResource( 3 )
ambient_light_energy = 0.0
glow_enabled = true
glow_blend_mode = 0
glow_hdr_threshold = 2.0
glow_high_quality = true

[node name="PlaySpace" type="Node2D"]
script = ExtResource( 4 )

[node name="BackGround" type="Sprite" parent="."]
visible = false
position = Vector2( 640, 360 )
texture = ExtResource( 2 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="Snakes" type="Node2D" parent="."]

[node name="Apples" type="Node2D" parent="."]

[node name="Particles" type="Node2D" parent="."]

[node name="DeathTexts" type="Node2D" parent="."]

[node name="SnakesTimer" type="Timer" parent="."]

[node name="PauseMenu" parent="." instance=ExtResource( 1 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 2560.0
margin_bottom = 1440.0

[node name="ServerClosed" type="Control" parent="."]
margin_right = 2560.0
margin_bottom = 1440.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="ServerClosed"]
anchor_left = 0.423
anchor_top = 0.356
anchor_right = 0.575
anchor_bottom = 0.644
margin_left = 1.12
margin_top = -0.640015
margin_right = 3.99988
margin_bottom = 0.639893
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ServerClosed/Panel"]
anchor_left = 0.133
anchor_top = 0.231
anchor_right = 0.929
anchor_bottom = 0.418
margin_left = -0.136002
margin_top = -0.0960007
margin_right = -0.167999
margin_bottom = 0.112
text = "SERVER CLOSED "

[node name="Button" type="Button" parent="ServerClosed/Panel"]
anchor_left = 0.265
anchor_top = 0.615
anchor_right = 0.755
anchor_bottom = 0.822
margin_left = 0.119995
margin_top = 0.160004
margin_right = 0.039978
margin_bottom = -38.952
text = "Go back"

[connection signal="timeout" from="SnakesTimer" to="." method="_on_SnakesTimer_timeout"]
[connection signal="pressed" from="PauseMenu/Panel/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="PauseMenu/Panel/Disconnect" to="." method="_on_Disconnect_pressed"]
[connection signal="pressed" from="PauseMenu/Panel/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="ServerClosed/Panel/Button" to="." method="_on_ServerDead_Button_pressed"]

[editable path="PauseMenu"]
